# reference-app

./: .gitignore  CONTEXT.md  IMPLEMENTATION.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest-setup.ts  vitest.config.ts
docs/: ISSUES.md
docs/adr/: 0001-analysis-split-canvas-hover-rust-batch.md  0002-cover-pins-in-central-store-keyed-by-relative-path.md  0003-luminosity-is-rec709-luma-on-srgb-bytes.md
docs/handoff/: back-button-simplification.md  slice-10-polish.md  slice-2-photographer-grid.md  slice-3-thumbnail-cache.md  slice-4-photographer-view.md  slice-5-viewer.md  slice-6-inspector-shell.md  slice-7-eyedropper.md  slice-9-palette.md  tests-and-slice-2.md
src/: App.svelte  App.test.ts  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: analysis.rs  lib.rs  main.rs  scan.rs  thumbs.rs
src/lib/: ipc.ts  motion.ts  types.ts
src/lib/analysis/: draw-histogram.test.ts  draw-histogram.ts  draw-vectorscope.test.ts  draw-vectorscope.ts  eyedropper.test.ts  eyedropper.ts
src/lib/components/: AllImagesView.svelte  Histogram.svelte  Inspector.svelte  PaletteBar.svelte  PhotoBio.svelte  PhotographerGrid.svelte  PhotographerGrid.test.ts  PhotographerView.svelte  PhotographerView.test.ts  RootPicker.svelte  Thumb.svelte  Thumb.test.ts  TileSizeSlider.svelte  TileSizeSlider.test.ts  Vectorscope.svelte  Viewer.svelte
src/lib/stores/: eyedropper.ts  navigation.test.ts  navigation.ts  root.ts  settings.ts
src/lib/viewer/: transform.test.ts  transform.ts
