[package]
name = "reference-app"
version = "0.1.0"
description = "Browse and visually analyse photographers' reference images"
authors = ["jmorley"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin name (a Windows
# linking quirk — see rust-lang/cargo#8519).
name = "reference_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# protocol-asset: serve full-res Reference images to the webview via the asset
# protocol (paths granted at runtime — see allow_root_assets in lib.rs).
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Decode + downscale Reference images into cached thumbnails (Slice 3, ADR-0001).
# Default features cover the formats we thumbnail (jpeg/png/gif/webp/tiff/bmp);
# HEIC/AVIF aren't decoded by `image`, so those covers fall back to a placeholder.
image = "0.25"

[dev-dependencies]
# Temp directory trees for exercising scan.rs's folder-walking rules.
tempfile = "3"
